tests/baselines/reference/overloadResolutionTest1.errors.txt
tests/cases/compiler/overloadResolutionTest1.ts(7,16): error TS2345: Argument of type '{ a: "s"; }[]' is not assignable to parameter of type '{ a: 真假; }[]'.
  Type '{ a: "s"; }' is not assignable to type '{ a: 真假; }'.
    Types of property 'a' are incompatible.
      Type '"s"' is not assignable to type '真假'.
tests/cases/compiler/overloadResolutionTest1.ts(18,15): error TS2345: Argument of type '{ a: "s"; }' is not assignable to parameter of type '{ a: 真假; }'.
  Types of property 'a' are incompatible.
    Type '"s"' is not assignable to type '真假'.
tests/cases/compiler/overloadResolutionTest1.ts(24,14): error TS2345: Argument of type '{ a: 真假; }' is not assignable to parameter of type '{ a: 文字; }'.
  Types of property 'a' are incompatible.
    Type '真假' is not assignable to type '文字'.


==== tests/cases/compiler/overloadResolutionTest1.ts (3 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar };
    
    var x1 = foo([{a:true}]); // works
    var x11 = foo([{a:0}]); // works
    var x111 = foo([{a:"s"}]); // error - does not match any signature
                   ~~~~~~~~~
!!! error TS2345: Argument of type '{ a: "s"; }[]' is not assignable to parameter of type '{ a: 真假; }[]'.
!!! error TS2345:   Type '{ a: "s"; }' is not assignable to type '{ a: 真假; }'.
!!! error TS2345:     Types of property 'a' are incompatible.
!!! error TS2345:       Type '"s"' is not assignable to type '真假'.
    var x1111 = foo([{a:null}]); // works - ambiguous call is resolved to be the first in the overload set so this returns a string
    
    
    
    function foo2(bar:{a:number;}):string;
    function foo2(bar:{a:boolean;}):number;
    function foo2(bar:{a:any;}):any{ return bar };
    
    var x2 = foo2({a:0}); // works
    var x3 = foo2({a:true}); // works
    var x4 = foo2({a:"s"}); // error
                  ~~~~~~~
!!! error TS2345: Argument of type '{ a: "s"; }' is not assignable to parameter of type '{ a: 真假; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type '"s"' is not assignable to type '真假'.
    
    
    function foo4(bar:{a:number;}):number;
    function foo4(bar:{a:string;}):string;
    function foo4(bar:{a:any;}):any{ return bar };
    var x = foo4({a:true}); // error
                 ~~~~~~~~
!!! error TS2345: Argument of type '{ a: 真假; }' is not assignable to parameter of type '{ a: 文字; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type '真假' is not assignable to type '文字'.